fix show page typo

--- a/app/views/contents/show.html.erb
+++ b/app/views/contents/show.html.erb
@@ -13,8 +13,7 @@
 
 <p>
     <strong>Attachment:</strong>
-    <%#= link_to "Download", @content.file, download: "" %>
-    <% @content.files.each do |f| %>
+    <%= @content.files.each do |f| %>
         <%= link_to "#{f.blob.filename}", f.blob.download, download: "" %>
     <% end %>
 </p>
