--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -9,7 +9,12 @@
 
     <body>
         <%= yield %>
+        <hr>
         <br>
+        <p>
+            This is a rails playground project for Trix-editor and rails active storage.
+            <br>View source code here: https://github.com/leonfury/rails-trix-playground
+        </p>
         <br>
         <footer>
             Best regards,
