--- a/app/views/contents/show.html.erb
+++ b/app/views/contents/show.html.erb
@@ -13,8 +13,8 @@
 
 <p>
     <strong>Attachment:</strong>
-    <%= @content.files.each do |f| %>
-        <%= link_to "#{f.blob.filename}", f.blob.download, download: "" %>
+    <% @content.files.each do |f| %>
+        <%= link_to "#{f.blob.filename}", f, download: "" %>
     <% end %>
 </p>
 
