--- a/app/views/contents/index.html.erb
+++ b/app/views/contents/index.html.erb
@@ -14,7 +14,7 @@
 <%= link_to 'New Content', new_content_path, class:"btn btn-primary text-white" %>
 
 <hr>
-<table border="1" cellpadding="20px" style="text-align: top;" width="100%">
+<table class="table" style="text-align: top;" width="100%">
     <thead>
         <tr>
             <th width="15%">Subject</th>
