trix updated with font color capability and underline

--- a/app/views/contents/_form.html.erb
+++ b/app/views/contents/_form.html.erb
@@ -30,7 +30,7 @@
     </div>
     <hr>
     <!-- Trix-editor code here -->
-    <trix-editor input="input_content" style="width:90vw; height: 30vh;"></trix-editor>
+    <trix-editor input="input_content" style="width:90vw; height: 30vh; overflow: scroll;"></trix-editor>
     <div class="actions">
         <%= form.submit %>
     </div>
