--- a/app/views/contents/index.html.erb
+++ b/app/views/contents/index.html.erb
@@ -28,7 +28,7 @@
         <% @contents.each do |content| %>
         <tr>
             <td><%= content.subject %></td>
-            <td><%= sanitize content.body %></td>
+            <td><%= sanitize content.body, attributes: %w(style) %></td>
             <td><%= content.files.count %></td>
             <td><%= link_to 'Show', content, class:"btn btn-success text-white" %></td>
             <td><%= link_to 'Edit', edit_content_path(content), class:"btn btn-success text-white" %></td>
