--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,3 +15,14 @@
  *= require_tree .
  *= require_self
  */
+
+.sanitize_body {
+    border: 1px solid red;
+}
+
+.sanitize_body img, .sanitize_body figcaption {
+    margin: auto;
+    display: block;
+    border: 1px solid green;
+    text-align: center;
+}
